--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "babel-loader": "^8.2.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-redux": "^7.2.2",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
